# G4BoilerPlate

./: main.py
template/: CMakeLists.txt  main.cpp
template/include/: APPPREFIXActionInitialization.h  APPPREFIXDetectorConstruction.h  APPPREFIXPrimaryGeneratorAction.h  APPPREFIXRunAction.h  APPPREFIXSteppingAction.h
template/src/: APPPREFIXActionInitialization.cpp  APPPREFIXDetectorConstruction.cpp  APPPREFIXEventAction.cpp  APPPREFIXPrimaryGeneratorAction.cpp  APPPREFIXRunAction.cpp  APPPREFIXSteppingAction.cpp  APPPREFIXTrackInformation.cpp  HWDetectorConstruction.cpp
template_basic/: README.md  main.cpp
template_basic/include/: APPPREFIXDetectorConstruction.h  APPPREFIXEventAction.h  APPPREFIXSteppingAction.h  APPPREFIXTrackInformation.h  APPPREFIXTrackingAction.h
template_basic/src/: APPPREFIXDetectorConstruction.cpp  APPPREFIXEventAction.cpp  APPPREFIXTrackingAction.cpp
template_extended/: CMakeLists.txt  GNUmakefile  README.md  geometry.gdml  main.cc
template_extended/include/: APPPREFIXActionInitialization.hh  APPPREFIXDetectorConstruction.hh  APPPREFIXPrimaryGeneratorAction.hh  APPPREFIXRun.hh  APPPREFIXRunAction.hh
template_extended/src/: APPPREFIXActionInitialization.cc  APPPREFIXDetectorConstruction.cc  APPPREFIXPrimaryGeneratorAction.cc  APPPREFIXRun.cc  APPPREFIXRunAction.cc
